--- a/news.html
+++ b/news.html
@@ -19,6 +19,84 @@
 </ul>
 <br><br><br><br>
 sunt la news
+<br><br><br><br>
+<img src="poze/10.jpg" alt="casa1">
+<img src="poze/11.jpg" alt="casa1">
+<img src="poze/12.jpg" alt="casa1">
+<img src="poze/13.jpg" alt="casa1">
+<img src="poze/14.jpg" alt="casa1">
+<img src="poze/15.jpg" alt="casa1">
+<img src="poze/16.jpg" alt="casa1">
+<img src="poze/17.jpg" alt="casa1">
+<img src="poze/18.jpg" alt="casa1">
+<img src="poze/19.jpg" alt="casa1">
+<img src="poze/110.jpg" alt="casa1">
+<img src="poze/111.jpg" alt="casa1">
+<img src="poze/112.jpg" alt="casa1">
+<img src="poze/113.jpg" alt="casa1">
+<img src="poze/114.jpg" alt="casa1">
+
+<br><br><br><br>
+
+<hr>
+
+<br><br><br><br>
+
+<img src="poze/20.jpg" alt="casa2">
+<img src="poze/21.jpg" alt="casa2">
+<img src="poze/22.jpg" alt="casa2">
+<img src="poze/23.jpg" alt="casa2">
+<img src="poze/24.jpg" alt="casa2">
+<img src="poze/25.jpg" alt="casa2">
+<img src="poze/26.jpg" alt="casa2">
+<img src="poze/27.jpg" alt="casa2">
+<img src="poze/28.jpg" alt="casa2">
+<img src="poze/29.jpg" alt="casa2">
+<img src="poze/210.jpg" alt="casa2">
+<img src="poze/211.jpg" alt="casa2">
+
+<br><br><br><br>
+
+<hr>
+
+<br><br><br><br>
+
+
+
+<img src="poze/30.jpg" alt="casa3">
+<img src="poze/31.jpg" alt="casa3">
+<img src="poze/32.jpg" alt="casa3">
+<img src="poze/33.jpg" alt="casa3">
+<img src="poze/34.jpg" alt="casa3">
+<img src="poze/35.jpg" alt="casa3">
+<img src="poze/36.jpg" alt="casa3">
+<img src="poze/37.jpg" alt="casa3">
+<img src="poze/38.jpg" alt="casa3">
+<img src="poze/39.jpg" alt="casa3">
+
+
+<br><br><br><br>
+
+<hr>
+
+<br><br><br><br>
+
+
+<img src="poze/40.jpg" alt="casa4">
+<img src="poze/41.jpg" alt="casa4">
+<img src="poze/42.jpg" alt="casa4">
+<img src="poze/43.jpg" alt="casa4">
+<img src="poze/44.jpg" alt="casa4">
+<img src="poze/45.jpg" alt="casa4">
+<img src="poze/46.jpg" alt="casa4">
+<img src="poze/47.jpg" alt="casa4">
+
+
+
+
+
+
+
 
 </body>
 </html>
