--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Shop Homepage - Start Bootstrap Template</title>
+  <title>Real-Estate MII Moscow</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,14 +23,14 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">	Moscow MII</a>
+      <a class="navbar-brand" href="#">Start Bootstrap</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="index.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -41,7 +41,7 @@
             <a class="nav-link" href="#">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -55,7 +55,7 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Moscow MII</h1>
+        <h1 class="my-4">Shop Name</h1>
         <div class="list-group">
           <a href="#" class="list-group-item">Category 1</a>
           <a href="#" class="list-group-item">Category 2</a>
@@ -75,13 +75,13 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="h.jpg" alt="First slide">
+              <img class="d-block img-fluid" src="mansion10.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="contact.jpg" alt="Second slide">
+              <img class="d-block img-fluid" src="mansion13.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="70.jpg" alt="Third slide">
+              <img class="d-block img-fluid" src="mansion14.jpg" alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -98,13 +98,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="0.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="mansion2.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item one</a>
+                  <a href="lux1.html">Luxury villa near Black Sea, Sochi</a>
                 </h4>
-                <h5>$600.000</h5>
-                <p class="card-text">Luxury apartments under 700.000$</p>
+                <h5>$900.000</h5>
+                <p class="card-text">New constructed luxury mansion near Black Sea, Sochi</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -114,13 +114,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="cars-img-top" src="f.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="mansion5.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Two</a>
+                  <a href="lux2.html">Luxury apartment, Odessa</a>
                 </h4>
-                <h5>$550.000</h5>
-                <p class="card-text">Luxury apartments under $600.000</p>
+                <h5>$900.000</h5>
+                <p class="card-text">New luxury apartment in Odessa, Russia.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -130,13 +130,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="00.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="mansion1.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Three</a>
+                  <a href="lux3.html">Big mansion in Novgorod, Russia</a>
                 </h4>
-                <h5>$500.00</h5>
-                <p class="card-text">Luxury apartments under $550.000</p>
+                <h5>$589.000</h5>
+                <p class="card-text">Newly constructed mansion in Novgorod, 2019</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -146,13 +146,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="7.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="mansion6.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Four</a>
+                  <a href="lux4.html">House in St. Petersburg's hills</a>
                 </h4>
-                <h5>$450.000</h5>
-                <p class="card-text">Luxury apartments under $500.000</p>
+                <h5>$790.000</h5>
+                <p class="card-text">New house in St. Petersburg, up on the hills.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -162,13 +162,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="8.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="mansion3.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Five</a>
+                  <a href="lux5.html">House near Baikal lake</a>
                 </h4>
-                <h5>$670.000</h5>
-                <p class="card-text">Luxury apartments under $700.000.</p>
+                <h5>$500.000</h5>
+                <p class="card-text">Newly renovated house near Baikal lake in Russia.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -178,13 +178,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="9.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="mansion8.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Six</a>
+                  <a href="lux6.html">Extreme luxury mansion in Sochi, Russia.</a>
                 </h4>
-                <h5>$530.000</h5>
-                <p class="card-text">Luxury apartment in the center of Moscow!</p>
+                <h5>$1.700.000</h5>
+                <p class="card-text">Located on the hills, one of the most luxurious mansions in Russia.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
