--- a/lux2.html
+++ b/lux2.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link"  href="index.html">Home
+            <a class="nav-link" href="#">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -58,24 +58,23 @@
 
         <h1 class="my-4">Shop Name</h1>
         <div class="list-group">
-          <a href="index.html" class="list-group-item">Category 1</a>
+          <a href="#" class="list-group-item">Category 1</a>
           <a href="#" class="list-group-item">Category 2</a>
           <a href="#" class="list-group-item">Category 3</a>
 	</div>
         </div>
  </div>
- <h4>Phone number:<br>
-8-800-333-0990 for MTT<br>
-8-800-100-2525 RT;<br>
-<div class="1">
-Postal number:<br>
-</div>
-116-Moscow;<br>
-<div>
-E-mail adress:<br>
-</div>
-miimoscow@gmail.com<br>
-masha.romanovna@gmail.com<h4>
+	<br>
+	<h4> Located in Odessa, the mansion was finished in 2018, having more than enough facilities. It is located on the hills, and has a straight private way of going up and down the road. It has 3 bedrooms, one guest room, 2 kitchens, 4 bathrooms, a big living room, a pool, and a terrace.</h4>
+	<br>
+	<br>
+	
+<img class="card-img-top" src="mansion4.jpg" alt="">
+<img class="card-img-top" src="mansion5!.jpg" alt="">
+<img class="card-img-top" src="mansion7.jpg" alt="">
+
+<br>
+<br>
 
       <!-- /.col-lg-3 -->
         <!-- /.row -->
@@ -102,8 +101,4 @@ masha.romanovna@gmail.com<h4>
 
 </body>
 
-</html>
-<body> 
-
-</body>
 </html>
