--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Real-Estate MII Moscow</title>
+  <title>Shop Homepage - Start Bootstrap Template</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,14 +23,14 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a class="navbar-brand" href="#">Real Estate Moscow MII</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home
+            <a class="nav-link" href="home.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -56,10 +56,10 @@
       <div class="col-lg-3">
 
         <h1 class="my-4">Shop Name</h1>
-        <div class="list-group">
-          <a href="#" class="list-group-item">Category 1</a>
-          <a href="#" class="list-group-item">Category 2</a>
-          <a href="#" class="list-group-item">Category 3</a>
+       <div class="list-group">
+          <a href="lux.html" class="list-group-item">Comfort 1</a>
+         <a href="index.html" class="list-group-item">Comfort 2</a>
+          <a href="normal.html" class="list-group-item">Comfort 3</a>
         </div>
 
       </div>
@@ -75,22 +75,12 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="mansion10.jpg" alt="First slide">
+              <img class="d-block img-fluid" src="coperta.png" alt="First slide">
             </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="mansion13.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="mansion14.jpg" alt="Third slide">
-            </div>
+
+       
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
+
           </a>
         </div>
 
@@ -98,13 +88,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="mansion2.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="cop2.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="lux1.html">Luxury villa near Black Sea, Sochi</a>
+                  <a href="#">Item One</a>
                 </h4>
-                <h5>$900.000</h5>
-                <p class="card-text">New constructed luxury mansion near Black Sea, Sochi</p>
+                <h5>$24.99</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -114,13 +104,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="mansion5.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="cop2.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="lux2.html">Luxury apartment, Odessa</a>
+                  <a href="#">Item Two</a>
                 </h4>
-                <h5>$900.000</h5>
-                <p class="card-text">New luxury apartment in Odessa, Russia.</p>
+                <h5>$24.99</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -130,13 +120,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="mansion1.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="cop2.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="lux3.html">Big mansion in Novgorod, Russia</a>
+                  <a href="#">Item Three</a>
                 </h4>
-                <h5>$589.000</h5>
-                <p class="card-text">Newly constructed mansion in Novgorod, 2019</p>
+                <h5>$24.99</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -146,13 +136,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="mansion6.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="cop2.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="lux4.html">House in St. Petersburg's hills</a>
+                  <a href="#">Item Four</a>
                 </h4>
-                <h5>$790.000</h5>
-                <p class="card-text">New house in St. Petersburg, up on the hills.</p>
+                <h5>$24.99</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -162,13 +152,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="mansion3.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="cop2.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="lux5.html">House near Baikal lake</a>
+                  <a href="#">Item Five</a>
                 </h4>
-                <h5>$500.000</h5>
-                <p class="card-text">Newly renovated house near Baikal lake in Russia.</p>
+                <h5>$24.99</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -178,13 +168,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="mansion8.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="lux6.html">Extreme luxury mansion in Sochi, Russia.</a>
+                  <a href="#">Item Six</a>
                 </h4>
-                <h5>$1.700.000</h5>
-                <p class="card-text">Located on the hills, one of the most luxurious mansions in Russia.</p>
+                <h5>$24.99</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
