--- a/oferta2.html
+++ b/oferta2.html
@@ -81,18 +81,59 @@
 
 
 
-      
+
+
+      <div class="col-lg-9">
+
+        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <img class="d-block img-fluid" src="bloc1.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="imag2.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="imag3.jpg" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+</div>
+
 
 
 <br> <br> <br> <br> <br>
 <div class="anunturi">
+Apartament 2 camere, decomandat, ce se evidentiaza prin spatiul amplu si eficient compartimentat. Imobilul dispune de camere spatioase, ce ofera multa lumina naturala.
 
-<h4> Adresa e-mail : RealEstate@gmail.com
-<br> Telefon: 0766 335 958
-<br> Adresa: Bd Moscow 438 Jr.
-<br> Fax: 0034 883 245
-</h4>
+Dotarile si finisajele, avand cele mai inalte standarde tehnologice, includ urmatoarele echipamente: usa metalica, centrala termica, calorifere din otel, obiecte sanitare in baie, ferestre cu geam din termopan, gresie, faianta, parchet, usi de interior.
 
+Accesul la statia de metrou si la celelalte mijloace de transport in comun se realizeaza rapid, doar 400m pana la statia metroului Aparatorii Patriei si doar 50m pana la statia RATB.
+
+Achizitionarea se poate realiza atat prin plata cash cat si prin intermediul creditelor bancare, indiferent de institutia bancara!
+
+Reduceri semnificative la plata CASH!!
+
+<ul> 
+<li>An finalizare constructie: 2019</li>
+<li>Etaj 5</li>
+<li>Suprafata: 68 metrii patrati </li>
+<li>Nemobilat</li>
+<li>+Loc de parcare</li>
+</ul>
 </div>
 
 <!-- anunt -->
