--- a/oferta3.html
+++ b/oferta3.html
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Real Estate Moscow MII</a>
+       <a class="navbar-brand" href="#">Real Estate Moscow MII</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -81,18 +81,57 @@
 
 
 
-      
+
+
+      <div class="col-lg-9">
+
+        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+</div>
+
 
 
 <br> <br> <br> <br> <br>
 <div class="anunturi">
+Apartament cu 3 camere, decomandat, ce se evidentiaza prin spatiul amplu si eficient compartimentat. Imobilul dispune de camere spatioase, ce ofera multa lumina naturala.
 
-<h4> Adresa e-mail : RealEstate@gmail.com
-<br> Telefon: 0766 335 958
-<br> Adresa: Bd Moscow 438 Jr.
-<br> Fax: 0034 883 245
-</h4>
+Dotarile si finisajele, avand cele mai inalte standarde tehnologice, includ urmatoarele echipamente: usa metalica, centrala termica, calorifere din otel, obiecte sanitare in baie, ferestre cu geam din termopan, gresie, faianta, parchet, usi de interior.
 
+Accesul la statia de metrou si la celelalte mijloace de transport in comun se realizeaza rapid.
+
+Achizitionarea se poate realiza atat prin plata cash cat si prin intermediul creditelor bancare, indiferent de institutia bancara!
+
+					<ul> 
+					<li>Numar camere: 3</li>
+					<li>Etaj 3</li>
+					<li>Suprafata: 84mp</li>
+					<li>Nemobilat </li>
+					<li>An finalizare constructie: 2018 </li>
+					</ul>
 </div>
 
 <!-- anunt -->
